--- a/agenda_nova/requirements.txt
+++ b/agenda_nova/requirements.txt
@@ -1,24 +1,48 @@
 asgiref==3.5.0
+attrs==22.2.0
 bcrypt==3.2.0
+certifi==2022.12.7
 cffi==1.15.0
+charset-normalizer==2.1.1
 click==8.1.2
+clickclick==20.10.2
+colorama==0.4.6
+connexion==2.14.2
+distlib==0.3.6
 dnspython==2.2.1
 email-validator==1.1.3
+filelock==3.9.0
 Flask==2.1.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
+gunicorn==20.1.0
+heroku==0.1.4
 idna==3.3
 importlib-metadata==4.11.3
+inflection==0.5.1
 itsdangerous==2.1.2
 Jinja2==3.1.1
+jsonschema==4.17.3
 MarkupSafe==2.1.1
+mysqlclient==2.1.1
+packaging==23.0
+platformdirs==2.6.2
 pycparser==2.21
+PyMySQL==1.0.3
+pyrsistent==0.19.3
+python-dateutil==1.5
+python-dotenv==1.0.0
+PyYAML==6.0
+requests==2.28.1
 six==1.16.0
 SQLAlchemy==1.4.35
 sqlparse==0.4.2
+swagger-ui-bundle==0.0.9
+urllib3==1.26.14
+virtualenv==20.17.1
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
